[package]
name = "taskwait"
version = "0.1.0"
authors = ["staticgc <metanym3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.12"

[dev-dependencies]
tokio = {version="1.3.0", features=["full"]}