[package]
name = "taskwait"
version = "0.3.0"
authors = ["staticgc <metanym3@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Runtime agnostic way to wait for a group of async tasks"
homepage = "https://github.com/staticgc/taskwait"
documentation = "https://docs.rs/taskwait"
repository = "https://github.com/staticgc/taskwait"
readme = "README.md"

keywords = ["async", "await", "wait", "waitgroup", "tasks"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = {version="0.3.12", features=["async-await"]}

[dev-dependencies]
tokio = {version="1.3.0", features=["full"]}